--- a/app/src/main/res/layout/daily_forecast_item.xml
+++ b/app/src/main/res/layout/daily_forecast_item.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/absoluteBlack"
-        android:textSize="@dimen/text_view_14sp"
+        android:textSize="@dimen/text_view_14dp"
         app:fontFamily="@font/montserrat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/absoluteBlack"
-        android:textSize="@dimen/text_view_14sp"
+        android:textSize="@dimen/text_view_14dp"
         app:fontFamily="@font/montserrat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
