--- a/app/src/main/res/layout/about_layout.xml
+++ b/app/src/main/res/layout/about_layout.xml
@@ -27,7 +27,7 @@
         android:padding="@dimen/margin_16"
         android:text="@string/about_setting_title"
         android:textColor="@color/absoluteBlack"
-        android:textSize="@dimen/text_view_24sp"
+        android:textSize="@dimen/text_view_24dp"
         app:fontFamily="@font/montserrat"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,7 +53,7 @@
             android:paddingBottom="@dimen/margin_32"
             android:text="@string/about_dialog_intro"
             android:textColor="@color/absoluteBlack"
-            android:textSize="@dimen/text_view_20sp"
+            android:textSize="@dimen/text_view_20dp"
             app:fontFamily="@font/montserrat" />
 
         <TextView
@@ -65,7 +65,7 @@
             android:paddingBottom="@dimen/margin_32"
             android:text="@string/about_dialog_outro"
             android:textColor="@color/absoluteBlack"
-            android:textSize="@dimen/text_view_20sp"
+            android:textSize="@dimen/text_view_20dp"
             app:fontFamily="@font/montserrat" />
     </LinearLayout>
 
