--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,7 +48,7 @@
             android:padding="@dimen/margin_16"
             android:text="@string/location_list_title"
             android:textColor="@color/absoluteBlack"
-            android:textSize="@dimen/text_view_24sp"
+            android:textSize="@dimen/text_view_24dp"
             app:fontFamily="@font/montserrat"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -113,7 +113,7 @@
             android:layout_centerInParent="true"
             android:text="@string/loading_text"
             android:textColor="@color/absoluteBlack"
-            android:textSize="@dimen/text_view_18sp"
+            android:textSize="@dimen/text_view_18dp"
             app:fontFamily="@font/montserrat" />
     </RelativeLayout>
 
@@ -138,7 +138,7 @@
             android:fontFamily="@font/montserrat_light"
             android:text="404"
             android:textColor="@color/absoluteBlack"
-            android:textSize="@dimen/text_view_54sp"
+            android:textSize="@dimen/text_view_54dp"
             app:layout_constraintBottom_toTopOf="@id/guideline2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -151,7 +151,7 @@
             android:fontFamily="@font/montserrat"
             android:text="@string/no_connection_tv1"
             android:textColor="@color/absoluteBlack"
-            android:textSize="@dimen/text_view_24sp"
+            android:textSize="@dimen/text_view_24dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/guideline2" />
@@ -165,7 +165,7 @@
             android:padding="@dimen/margin_16"
             android:text="@string/no_connection_tv2"
             android:textColor="@color/absoluteBlack"
-            android:textSize="@dimen/text_view_14sp"
+            android:textSize="@dimen/text_view_14dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView2" />
