--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -46,7 +46,7 @@
             android:fontFamily="@font/montserrat"
             android:text="@string/next"
             android:textColor="@android:color/white"
-            android:textSize="@dimen/text_view_14sp"
+            android:textSize="@dimen/text_view_14dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
