--- a/app/src/main/res/layout/aqi_detail_layout.xml
+++ b/app/src/main/res/layout/aqi_detail_layout.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:text="@string/air_quality_dialog_heading"
         android:textColor="@color/absoluteBlack"
-        android:textSize="@dimen/text_view_20sp"
+        android:textSize="@dimen/text_view_20dp"
         app:fontFamily="@font/montserrat"
         android:layout_marginStart="@dimen/margin_8"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +31,7 @@
             android:layout_height="@dimen/aqi_Index_size"
             android:textColor="@color/pureWhite"
             android:gravity="center"
-            android:textSize="@dimen/text_view_40sp"
+            android:textSize="@dimen/text_view_40dp"
             app:fontFamily="@font/montserrat"
             android:background="@drawable/aqi_background"
             android:layout_marginStart="@dimen/margin_8"
@@ -67,7 +67,7 @@
                 android:layout_marginTop="@dimen/margin_2"
                 android:layout_marginEnd="@dimen/margin_24"
                 android:textColor="@color/absoluteBlack"
-                android:textSize="@dimen/text_view_16sp"
+                android:textSize="@dimen/text_view_16dp"
                 app:fontFamily="@font/montserrat" />
 
             <TextView
@@ -78,7 +78,7 @@
                 android:gravity="center_vertical"
                 android:layout_marginBottom="@dimen/margin_2"
                 android:textColor="@color/absoluteBlack"
-                android:textSize="@dimen/text_view_14sp"
+                android:textSize="@dimen/text_view_14dp"
                 app:fontFamily="@font/montserrat" />
         </LinearLayout>
 
@@ -100,7 +100,7 @@
             android:layout_height="wrap_content"
             android:text="@string/provided_by_aqi_cn_org"
             android:textColor="@color/absoluteBlack"
-            android:textSize="@dimen/text_view_12sp"
+            android:textSize="@dimen/text_view_12dp"
             android:layout_marginTop="@dimen/margin_4"
             android:paddingStart="@dimen/margin_16"
             android:paddingEnd="@dimen/margin_16"
