--- a/app/src/main/res/layout/cloud_pressure_visibility_detail_layout.xml
+++ b/app/src/main/res/layout/cloud_pressure_visibility_detail_layout.xml
@@ -35,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/absoluteBlack"
-                android:textSize="@dimen/text_view_14sp"
+                android:textSize="@dimen/text_view_14dp"
                 app:fontFamily="@font/montserrat" />
 
             <TextView
@@ -43,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/cloud_cover_title"
                 android:textColor="@color/absoluteBlack"
-                android:textSize="@dimen/text_view_14sp"
+                android:textSize="@dimen/text_view_14dp"
                 app:fontFamily="@font/montserrat" />
         </LinearLayout>
     </LinearLayout>
@@ -73,7 +73,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/absoluteBlack"
-                android:textSize="@dimen/text_view_14sp"
+                android:textSize="@dimen/text_view_14dp"
                 app:fontFamily="@font/montserrat" />
 
             <TextView
@@ -82,7 +82,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/pressure_title"
                 android:textColor="@color/absoluteBlack"
-                android:textSize="@dimen/text_view_14sp"
+                android:textSize="@dimen/text_view_14dp"
                 app:fontFamily="@font/montserrat" />
         </LinearLayout>
     </LinearLayout>
@@ -112,7 +112,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/absoluteBlack"
-                android:textSize="@dimen/text_view_14sp"
+                android:textSize="@dimen/text_view_14dp"
                 app:fontFamily="@font/montserrat" />
 
             <TextView
@@ -120,7 +120,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/visibility_title"
                 android:textColor="@color/absoluteBlack"
-                android:textSize="@dimen/text_view_14sp"
+                android:textSize="@dimen/text_view_14dp"
                 app:fontFamily="@font/montserrat" />
         </LinearLayout>
     </LinearLayout>
