--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -28,7 +28,7 @@
                 android:paddingBottom="@dimen/margin_16"
                 android:text="@string/details_heading"
                 android:textColor="@color/absoluteBlack"
-                android:textSize="@dimen/text_view_20sp"
+                android:textSize="@dimen/text_view_20dp"
                 app:fontFamily="@font/montserrat" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -45,7 +45,7 @@
                     android:layout_marginStart="@dimen/margin_8"
                     android:text="@string/real_feel_title_explicit"
                     android:textColor="@color/absoluteBlack"
-                    android:textSize="@dimen/text_view_14sp"
+                    android:textSize="@dimen/text_view_14dp"
                     app:fontFamily="@font/montserrat"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="@id/ic_headWear" />
@@ -57,7 +57,7 @@
                     android:layout_marginBottom="@dimen/margin_8"
                     android:text="@string/why_this_pack"
                     android:textColor="@color/absoluteBlack"
-                    android:textSize="@dimen/text_view_14sp"
+                    android:textSize="@dimen/text_view_14dp"
                     app:fontFamily="@font/montserrat"
                     app:layout_constraintBottom_toTopOf="@+id/tvWearCause"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -69,7 +69,7 @@
                     android:layout_marginStart="@dimen/margin_8"
                     android:text="@string/cause_it_s"
                     android:textColor="@color/absoluteBlack"
-                    android:textSize="@dimen/text_view_14sp"
+                    android:textSize="@dimen/text_view_14dp"
                     app:fontFamily="@font/montserrat"
                     app:layout_constraintBottom_toBottomOf="@id/ic_footWare"
                     app:layout_constraintStart_toStartOf="parent" />
@@ -135,7 +135,7 @@
                 android:paddingBottom="@dimen/margin_8"
                 android:text="@string/what_to_eat_title"
                 android:textColor="@color/absoluteBlack"
-                android:textSize="@dimen/text_view_20sp"
+                android:textSize="@dimen/text_view_20dp"
                 app:fontFamily="@font/montserrat" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -147,7 +147,7 @@
 
                 <ImageView
                     android:id="@+id/ic_foodType"
-                    android:layout_width="@dimen/text_view_24sp"
+                    android:layout_width="@dimen/text_view_24dp"
                     android:layout_height="@dimen/icon_24dp"
                     android:layout_marginStart="@dimen/margin_8"
                     app:layout_constraintStart_toStartOf="parent"
@@ -163,7 +163,7 @@
                     android:paddingStart="@dimen/margin_8"
                     android:paddingEnd="@dimen/margin_8"
                     android:textColor="@color/hyperBlue"
-                    android:textSize="@dimen/text_view_14sp"
+                    android:textSize="@dimen/text_view_14dp"
                     app:fontFamily="@font/montserrat"
                     app:layout_constraintBottom_toBottomOf="@id/ic_foodType"
                     app:layout_constraintEnd_toStartOf="@id/ic_refreshFood"
@@ -206,7 +206,7 @@
 
                     android:text="@string/hourly_forecast_title"
                     android:textColor="@color/absoluteBlack"
-                    android:textSize="@dimen/text_view_20sp"
+                    android:textSize="@dimen/text_view_20dp"
 
                     app:fontFamily="@font/montserrat"
                     app:layout_constraintStart_toStartOf="parent"
@@ -232,7 +232,7 @@
                 android:text="@string/powered_by_dark_sky"
                 android:gravity="end"
                 android:textColor="@color/absoluteBlack"
-                android:textSize="@dimen/text_view_12sp"
+                android:textSize="@dimen/text_view_12dp"
                 android:layout_marginTop="@dimen/margin_4"
                 android:paddingStart="@dimen/margin_16"
                 android:paddingEnd="@dimen/margin_16"
@@ -253,7 +253,7 @@
                     android:paddingTop="@dimen/margin_16"
                     android:text="@string/sponsor"
                     android:textColor="@color/absoluteBlack"
-                    android:textSize="@dimen/text_view_20sp"
+                    android:textSize="@dimen/text_view_20dp"
                     app:fontFamily="@font/montserrat"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
