--- a/app/src/main/res/layout/greeting_slide.xml
+++ b/app/src/main/res/layout/greeting_slide.xml
@@ -26,7 +26,7 @@
         android:fontFamily="@font/montserrat"
         android:text="@string/slide_1_title"
         android:textColor="@color/pureWhite"
-        android:textSize="@dimen/text_view_24sp"
+        android:textSize="@dimen/text_view_24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -54,7 +54,7 @@
             android:gravity="center_horizontal"
             android:text="@string/slide_1_desc"
             android:textColor="@color/pureWhite"
-            android:textSize="@dimen/text_view_18sp"
+            android:textSize="@dimen/text_view_18dp"
             app:layout_constraintBottom_toBottomOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
