--- a/app/src/main/res/layout/hourly_forecast_item.xml
+++ b/app/src/main/res/layout/hourly_forecast_item.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/montserrat"
         android:textColor="@color/absoluteBlack"
-        android:textSize="@dimen/text_view_14sp"
+        android:textSize="@dimen/text_view_14dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,7 +36,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/montserrat"
         android:textColor="@color/flickRBlue"
-        android:textSize="@dimen/text_view_12sp"
+        android:textSize="@dimen/text_view_12dp"
         app:layout_constraintBottom_toTopOf="@id/hourlyHour"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +49,7 @@
         android:layout_marginTop="@dimen/margin_8"
         android:fontFamily="@font/montserrat"
         android:textColor="@color/absoluteBlack"
-        android:textSize="@dimen/text_view_14sp"
+        android:textSize="@dimen/text_view_14dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
