--- a/app/src/main/res/layout/photo_details_layout.xml
+++ b/app/src/main/res/layout/photo_details_layout.xml
@@ -20,7 +20,7 @@
         android:fontFamily="@font/montserrat"
         android:text="@string/photo_details_title"
         android:textColor="@color/absoluteBlack"
-        android:textSize="@dimen/text_view_18sp"
+        android:textSize="@dimen/text_view_18dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -35,7 +35,7 @@
         android:fontFamily="@font/montserrat"
         android:linksClickable="true"
         android:textColor="@color/absoluteBlack"
-        android:textSize="@dimen/text_view_16sp"
+        android:textSize="@dimen/text_view_16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/photo_detail_title" />
 
@@ -49,7 +49,7 @@
         android:paddingTop="@dimen/margin_4"
         android:paddingBottom="@dimen/margin_4"
         android:textColor="@color/absoluteBlack"
-        android:textSize="@dimen/text_view_12sp"
+        android:textSize="@dimen/text_view_12dp"
 
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/photo_name" />
@@ -81,7 +81,7 @@
         android:layout_marginStart="@dimen/margin_8"
         android:fontFamily="@font/montserrat"
         android:textColor="@color/absoluteBlack"
-        android:textSize="@dimen/text_view_14sp"
+        android:textSize="@dimen/text_view_14dp"
         app:layout_constraintBottom_toBottomOf="@id/ic_camera"
         app:layout_constraintStart_toEndOf="@id/ic_camera"
         app:layout_constraintEnd_toEndOf="parent"
@@ -105,7 +105,7 @@
         android:layout_marginStart="@dimen/margin_8"
         android:fontFamily="@font/montserrat"
         android:textColor="@color/absoluteBlack"
-        android:textSize="@dimen/text_view_14sp"
+        android:textSize="@dimen/text_view_14dp"
         app:layout_constraintBottom_toBottomOf="@id/ic_aperture"
         app:layout_constraintStart_toEndOf="@id/ic_aperture"
         app:layout_constraintTop_toTopOf="@id/ic_aperture" />
@@ -128,7 +128,7 @@
         android:layout_marginStart="@dimen/margin_8"
         android:fontFamily="@font/montserrat"
         android:textColor="@color/absoluteBlack"
-        android:textSize="@dimen/text_view_14sp"
+        android:textSize="@dimen/text_view_14dp"
         app:layout_constraintBottom_toBottomOf="@id/ic_focal_length"
         app:layout_constraintStart_toEndOf="@id/ic_focal_length"
         app:layout_constraintTop_toTopOf="@id/ic_focal_length" />
@@ -158,7 +158,7 @@
         android:layout_marginStart="@dimen/margin_8"
         android:fontFamily="@font/montserrat"
         android:textColor="@color/absoluteBlack"
-        android:textSize="@dimen/text_view_14sp"
+        android:textSize="@dimen/text_view_14dp"
         app:layout_constraintBottom_toBottomOf="@id/ic_exposure_time"
         app:layout_constraintStart_toEndOf="@id/ic_exposure_time"
         app:layout_constraintTop_toTopOf="@id/ic_exposure_time" />
@@ -181,7 +181,7 @@
         android:layout_marginStart="@dimen/margin_8"
         android:fontFamily="@font/montserrat"
         android:textColor="@color/absoluteBlack"
-        android:textSize="@dimen/text_view_14sp"
+        android:textSize="@dimen/text_view_14dp"
         app:layout_constraintBottom_toBottomOf="@id/ic_iso"
         app:layout_constraintStart_toEndOf="@id/ic_iso"
         app:layout_constraintTop_toTopOf="@id/ic_iso" />
