--- a/app/src/main/res/layout/sun_detail_layout.xml
+++ b/app/src/main/res/layout/sun_detail_layout.xml
@@ -14,7 +14,7 @@
         android:paddingEnd="@dimen/margin_8"
         android:text="@string/sun"
         android:textColor="@color/absoluteBlack"
-        android:textSize="@dimen/text_view_20sp"
+        android:textSize="@dimen/text_view_20dp"
         app:fontFamily="@font/montserrat"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -76,7 +76,7 @@
             android:padding="@dimen/margin_16"
             android:text="@string/sun_rise"
             android:textColor="@color/absoluteBlack"
-            android:textSize="@dimen/text_view_16sp"
+            android:textSize="@dimen/text_view_16dp"
             app:layout_constraintBottom_toBottomOf="@id/sunRise"
             app:layout_constraintEnd_toStartOf="@id/sunRise"
             app:layout_constraintStart_toStartOf="parent"
@@ -91,7 +91,7 @@
             android:padding="@dimen/margin_16"
             android:text="@string/mid_day"
             android:textColor="@color/absoluteBlack"
-            android:textSize="@dimen/text_view_14sp"
+            android:textSize="@dimen/text_view_14dp"
             app:layout_constraintBottom_toBottomOf="@id/midDay"
             app:layout_constraintEnd_toStartOf="@id/midDay"
             app:layout_constraintStart_toStartOf="parent"
@@ -106,7 +106,7 @@
             android:padding="@dimen/margin_16"
             android:text="@string/sun_set"
             android:textColor="@color/absoluteBlack"
-            android:textSize="@dimen/text_view_16sp"
+            android:textSize="@dimen/text_view_16dp"
             app:layout_constraintBottom_toBottomOf="@id/sunSet"
             app:layout_constraintEnd_toStartOf="@id/sunSet"
             app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +121,7 @@
             android:gravity="start"
             android:padding="@dimen/margin_16"
             android:textColor="@color/absoluteBlack"
-            android:textSize="@dimen/text_view_16sp"
+            android:textSize="@dimen/text_view_16dp"
             app:layout_constraintBottom_toBottomOf="@id/sunSet"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/sunSet"
@@ -136,7 +136,7 @@
             android:gravity="start"
             android:padding="@dimen/margin_16"
             android:textColor="@color/absoluteBlack"
-            android:textSize="@dimen/text_view_14sp"
+            android:textSize="@dimen/text_view_14dp"
             app:layout_constraintBottom_toBottomOf="@id/midDay"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/midDay"
@@ -151,7 +151,7 @@
             android:gravity="start"
             android:padding="@dimen/margin_16"
             android:textColor="@color/absoluteBlack"
-            android:textSize="@dimen/text_view_16sp"
+            android:textSize="@dimen/text_view_16dp"
             app:layout_constraintBottom_toBottomOf="@id/sunRise"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/sunRise"
