--- a/app/src/main/res/layout/wind_detail_layout.xml
+++ b/app/src/main/res/layout/wind_detail_layout.xml
@@ -14,7 +14,7 @@
         android:paddingEnd="@dimen/margin_8"
         android:text="@string/wind_title"
         android:textColor="@color/absoluteBlack"
-        android:textSize="@dimen/text_view_20sp"
+        android:textSize="@dimen/text_view_20dp"
         app:fontFamily="@font/montserrat"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -66,7 +66,7 @@
             android:paddingEnd="@dimen/margin_16"
             android:layout_marginBottom="@dimen/margin_8"
             android:textColor="@color/absoluteBlack"
-            android:textSize="@dimen/text_view_20sp"
+            android:textSize="@dimen/text_view_20dp"
             app:fontFamily="@font/montserrat"
             app:layout_constraintBottom_toTopOf="@+id/wind_direction"
             app:layout_constraintEnd_toEndOf="parent" />
@@ -79,7 +79,7 @@
             android:paddingEnd="@dimen/margin_16"
             android:layout_marginBottom="@dimen/margin_8"
             android:textColor="@color/absoluteBlack"
-            android:textSize="@dimen/text_view_18sp"
+            android:textSize="@dimen/text_view_18dp"
             app:fontFamily="@font/montserrat"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
