--- a/app/src/main/res/values-sw480dp/dimens.xml
+++ b/app/src/main/res/values-sw480dp/dimens.xml
@@ -131,41 +131,41 @@
   <dimen name="big_text">
     96.0sp
   </dimen>
-  <dimen name="text_view_12sp">
-    16.0sp
+  <dimen name="text_view_12dp">
+    16.0dp
   </dimen>
-  <dimen name="text_view_14sp">
-    18.67sp
+  <dimen name="text_view_14dp">
+    18.67dp
   </dimen>
-  <dimen name="text_view_16sp">
-    21.33sp
+  <dimen name="text_view_16dp">
+    21.33dp
   </dimen>
-  <dimen name="text_view_18sp">
-    24.0sp
+  <dimen name="text_view_18dp">
+    24.0dp
   </dimen>
-  <dimen name="text_view_20sp">
-    26.67sp
+  <dimen name="text_view_20dp">
+    26.67dp
   </dimen>
-  <dimen name="text_view_24sp">
-    32.0sp
+  <dimen name="text_view_24dp">
+    32.0dp
   </dimen>
-  <dimen name="text_view_30sp">
-    40.0sp
+  <dimen name="text_view_30dp">
+    40.0dp
   </dimen>
-  <dimen name="text_view_36sp">
-    48.0sp
+  <dimen name="text_view_36dp">
+    48.0dp
   </dimen>
-  <dimen name="text_view_40sp">
-    53.33sp
+  <dimen name="text_view_40dp">
+    53.33dp
   </dimen>
-  <dimen name="text_view_48sp">
-    64.0sp
+  <dimen name="text_view_48dp">
+    64.0dp
   </dimen>
-  <dimen name="text_view_54sp">
-    72.0sp
+  <dimen name="text_view_54dp">
+    72.0dp
   </dimen>
-  <dimen name="text_view_62sp">
-    82.67sp
+  <dimen name="text_view_62dp">
+    82.67dp
   </dimen>
   <dimen name="widget_height">
     142.67dp
