--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -131,41 +131,41 @@
   <dimen name="big_text">
     120.0sp
   </dimen>
-  <dimen name="text_view_12sp">
-    20.0sp
+  <dimen name="text_view_12dp">
+    20.0dp
   </dimen>
-  <dimen name="text_view_14sp">
-    23.33sp
+  <dimen name="text_view_14dp">
+    23.33dp
   </dimen>
-  <dimen name="text_view_16sp">
-    26.67sp
+  <dimen name="text_view_16dp">
+    26.67dp
   </dimen>
-  <dimen name="text_view_18sp">
-    30.0sp
+  <dimen name="text_view_18dp">
+    30.0dp
   </dimen>
-  <dimen name="text_view_20sp">
-    33.33sp
+  <dimen name="text_view_20dp">
+    33.33dp
   </dimen>
-  <dimen name="text_view_24sp">
-    40.0sp
+  <dimen name="text_view_24dp">
+    40.0dp
   </dimen>
-  <dimen name="text_view_30sp">
-    50.0sp
+  <dimen name="text_view_30dp">
+    50.0dp
   </dimen>
-  <dimen name="text_view_36sp">
-    60.0sp
+  <dimen name="text_view_36dp">
+    60.0dp
   </dimen>
-  <dimen name="text_view_40sp">
-    66.67sp
+  <dimen name="text_view_40dp">
+    66.67dp
   </dimen>
-  <dimen name="text_view_48sp">
-    80.0sp
+  <dimen name="text_view_48dp">
+    80.0dp
   </dimen>
-  <dimen name="text_view_54sp">
-    90.0sp
+  <dimen name="text_view_54dp">
+    90.0dp
   </dimen>
-  <dimen name="text_view_62sp">
-    103.33sp
+  <dimen name="text_view_62dp">
+    103.33dp
   </dimen>
   <dimen name="widget_height">
     178.33dp
